อัพเดท ไฟล์ หน้าแรก

--- a/th/index.html
+++ b/th/index.html
@@ -40,14 +40,14 @@
     </div>
     <div class="menubar" id="menubar">
         <div class="menu-drop">
-            <a onclick="signin()">Sing in</a>
+            <a onclick="signin()">เข้าสู่ระบบ</a>
         </div>
         <div class="menu-drop">
-            <a onclick="signup()">Become a Partner</a>
+            <a onclick="signup()">ร่วมเป็นพันธมิตร</a>
         </div>
         <div class="menu-drop">
             <div class="lang">
-                <a>EN</a> | <a href="../th/index.html">TH</a>
+                <a href="../en/index.html">EN</a> | <a>TH</a>
             </div>
         </div>
         <div class="menu-drop social-dropp">
@@ -63,32 +63,35 @@
         <div class="join diss-on">
             <div onclick="discord()" class="btn-discord diss-on">
                 <img src="../image/Group 512721.png" class="img-disc-btn" alt="">
-                <div class="btn-discord-txt">Join Our Discord</div>
+                <div class="btn-discord-txt">เข้าร่วม Discord</div>
             </div>
         </div>
         <div class="contain con-absolute">
             <div class="dissplay" id="dissplay">
                 <div class="con-open">
                     <div class="open">
-                        <h2>The Club is Open !!</h2>
+                        <h2>คลับเปิดแล้ว วันนี้ !!</h2>
                     </div>
                     <div class="welcome">
-                        Welcome to the <br><b>Aigent Club</b>
+                        ยินดีต้อนรับสู่ <br><b>Aigent Club</b>
                     </div>
                     <div class="wel-txt">
-                        A limited NFT Collection where the token itself doubles as<br> your membership
+                        เราเป็นเครื่องมือในการจองห้องพักที่ซึ่งโรงแรมสามารถเชื่อมต่อ กับนักท่องเที่ยวได้โดยตรงผ่านเทคโนโลยีบล็อคเชน
+
+
                     </div>
                     <div class="wel-button">
-                        <button onclick="video()" class="linear-btn wel-btn1">Watch Video</button>
-                        <button onclick="signup()" class="wel-btn2">Join Aigent Partners</button>
+                        <button onclick="video()" class="linear-btn wel-btn1">ชมวิดีโอ</button>
+                        <button onclick="signup()" class="wel-btn2">เข้าร่วม Aigent</button>
                     </div>
                 </div>
                 <div class="web30">
                     <div class="in-web-30">
                         <h1>
-                            <div class="opa0">READY</div> <br> FOR WEB 3.0 ?</h1>
+                            <div class="opa0">พร้อมหรือยัง</div> <br> ที่จะก้าวเข้าสู่ยุคเว็บ 3.0</h1>
                         <div class="wel-txt2" style="margin: auto;">
-                            Let's move forward together with the latest innovation of an e-Voucher platform.
+                            กับ อี-เวาเชอร์แพลตฟอร์ม ที่่ช่วยเพิ่มยอดขายแบบไร้คนกลาง
+
                         </div>
                     </div>
 
@@ -101,43 +104,49 @@
     <div class="join2 diss-none">
         <div onclick="discord()" class="btn-discord">
             <img src="../image/Group 512721.png" class="img-disc-btn" alt="">
-            <div class="btn-discord-txt">Join Our Discord</div>
+            <div class="btn-discord-txt">เข้าร่วม Discord</div>
         </div>
     </div>
     <div class="contain diss-flex who">
         <img src="../image/Group 512931.png" class="ship" alt="">
-        <h1>WHO IS AIGENT?</h1>
+        <h1>Aigent คือใคร?</h1>
         <div class="who-txt">
-            We are A-mobile based e-voucher application, designed as an innovative sales tool for hotels and a more flexible booking experience for travellers. Provides hotels the ability to generate instant revenue now, or in periods of low demand. Opens a new revenue
-            stream, enabling innovative business opportunities in a changing global market.
-        </div>
-        <h1>PARTNER WITH AIGENT TODAY</h1>
-        <div class="who-txt ">
-            Submit your hotel application and prepare for a huge sale! With the Aigent app, you can boost-up your hotel revenue. Hotel room for sales via E-Voucher Platform, and it's completely FREE today. START NOW!
+            แพลตฟอร์ม ที่ให้บริการ การจองห้องพักในรูปแบบของ อี-เวาเชอร์ ผ่านแอพพลิเคชัน บนมือถือ ที่ช่วยเพิ่มความสะดวกสบายและยืดหยุ่น ในการระบุวันที่เข้าพักได้ภายหลัง พร้อมทั้งโรงแรมสามารถกำหนดเงื่อนไขการเข้าพักต่างๆ ผ่านระบบเอกซ์ทราเน็ตได้ ด้วยตัวเอง
 
         </div>
-        <div class="who-txt ">
+        <h1>ร่วมเป็นพันธมิตรกับ Aigent วันนี้</h1>
+        <div class="who-txt">
+            ส่งใบสมัครโรงแรมของคุณและเตรียมพร้อมสำหรับการขายครั้งใหญ่! ด้วยแอป Aigent คุณสามารถเพิ่มรายได้ของโรงแรมได้ ขายห้องพักในโรงแรมผ่าน eVoucher Platform แล้ววันนี้ ฟรีทั้งหมด เริ่มเลย!
+
+
+        </div>
+        <div class="who-txt">
             <div class="who-list">
 
 
                 <div class="who-in-txt">
                     <img src="../image/Vector 124.png" alt="">
-                    <div class="who-txt-2"> increase liquidtity cash flow.</div>
+                    <div class="who-txt-2"> ขายแพ็คเกจเวาเชอร์ที่พัก บนแพลตฟอร์ม Mobile App. ที่มีผู้ใช้งานกว่า 1 ล้านคน</div>
                 </div>
                 <div class="who-in-txt">
                     <img src="../image/Vector 124.png" alt="">
-                    <div class="who-txt-2"> Automatically operating system like OTA.</div>
+                    <div class="who-txt-2"> เดือนกรกฏาคม 2565 พร้อมเปิดให้นักท่องเที่ยวดาวน์โหลดแอปพลิเคชันรวมทั้งเปิดให้โรงแรม เริ่มใช้ระบบเอกซ์ทราเน็ต
+                    </div>
                 </div>
                 <div class="who-in-txt">
                     <img src="../image/Vector 124.png" alt="">
-                    <div class="who-txt-2"> Zero comisstion with out marching fee.</div>
+                    <div class="who-txt-2"> ฟรี ค่าบริการการใช้งานแพลตฟอร์ม</div>
                 </div>
                 <div class="who-in-txt">
                     <img src="../image/Vector 124.png" alt="">
-                    <div class="who-txt-2"> DIY create e voucher price with flexible plan.</div>
+                    <div class="who-txt-2"> ฟรี ค่าธรรมเนียมการทำธุรกรรม (Merchant fee)</div>
+                </div>
+                <div class="who-in-txt">
+                    <img src="../image/Vector 124.png" alt="">
+                    <div class="who-txt-2"> Aigent ทำการตลาดให้กับพาร์ตเนอร์ในทุกช่องทางโดยไม่คิดค่าใช้จ่าย
+                    </div>
                 </div>
             </div>
-
 
         </div>
     </div>
@@ -145,17 +154,16 @@
     <div class="contain condition">
 
         <div class="condition-head">
-            <b>One Condition</b>
-            <br>for partner
+            <b>เงื่อนไขการเข้าร่วม</b>
         </div>
         <div class="condition-txt">
-            Provide 50% discount the standard voucher price <br> for at least 1 Aigent Member Club room/day, <br> but not more than 3,000 baht per night. <br>
-            <br> (hotel can set maximum room per night) <br><br>
-            <span>Note : Guest's booking & stay is according to hotel's conditions.</span>
+            มอบส่วนลด 50% สูงสุดไม่เกิน 3,000 บาทต่อคืนจากราคาขายเวาเชอร์ปกติสำหรับ Aigent Member Club อย่างน้อย 1 ห้อง/วัน
+            <br> (โรงแรมสามารถกำหนดจำนวนห้องสูงสุดต่อคืนได้) <br><br>
+            <span>หมายเหตุ : เงื่อนไขเวาเชอร์เป็นไปตามที่โรงแรมกำหนด</span>
 
         </div>
         <div class="condition-btn">
-            <button onclick="signup()" class="linear-btn con-btn">SignUp Now</button>
+            <button onclick="signup()" class="linear-btn con-btn">เข้าร่วมทันที</button>
         </div>
 
     </div>
@@ -210,29 +218,29 @@
         </div>
     </div>
     <div class="join_to_free">
-        <h1>FREE TO JOIN</h1>
+        <h1>เข้าร่วมฟรี</h1>
         <div class="join-txt">
-            Aigent platform today commission fee & merchant fee.
+            แพลตฟอร์ม Aigent วันนี้ค่าคอมมิชชั่น & ค่าธรรมเนียมการค้า
         </div>
         <div class="join-btn">
-            <button onclick="signup()" class="linear-btn con-btn">Partner with us</button>
+            <button onclick="signup()" class="linear-btn con-btn">มาเป็นพันธมิตรกับเรา</button>
         </div>
     </div>
 
     <footer>
         <div class="in-footer">
             <div class="footer">
-                <h3>QUICK LINKS.</h3>
+                <h3>โครงสร้างเว็บไซต์</h3>
                 <div class="footer-txt">
-                    <a href="index.html">Home</a><br>
-                    <a href="https://app.aigentcorporation.com/signup">Become a Partner</a><br>
+                    <a href="index.html">หน้าแรก</a><br>
+                    <a href="https://app.aigentcorporation.com/signup">เข้าร่วมพันธมิตร</a><br>
                     <a href="https://app.aigentcorporation.com/signup">Aigent Club</a><br>
                 </div>
 
             </div>
             <div class="footer">
                 <div class="download">
-                    <h3>DOWNLOAD APP</h3>
+                    <h3>ดาวน์โหลด</h3>
                     <div class="d-img">
                         <img src="../image/app-googleplay.png" alt="">
                         <img src="../image/app-appstore.png" alt="">
@@ -244,7 +252,7 @@
             <div class="footer">
                 <img src="../image/Group.png" class="footer-logo" alt="">
                 <div class="footer-txt">
-                    The world's first NFT Hotel Evoucher
+                    NFT Hotel Evoucher แห่งแรกของโลก
                     <div class="footer-img">
                         <a class="pointer" onclick="fb()"><img src="../image/001-facebook.png" alt=""></a>
                         <a class="pointer" onclick="tw()"><img src="../image/003-twitter.png" alt=""></a>
@@ -257,8 +265,8 @@
         </div>
         <div class="footer-txt ml-20">
             @ 2022 Aigent Corporation Limited. All Right Reserved <br>
-            <a onclick="Pivacy()" class="pointer"> Pivacy Policy</a> |
-            <a onclick="Terms()" class="pointer">Terms & Conditions</a>
+            <a onclick="Pivacy()" class="pointer"> นโยบายความเป็นส่วนตัว</a> |
+            <a onclick="Terms()" class="pointer">ข้อตกลงและเงื่อนไข</a>
         </div>
 
 
