--- a/en/index.html
+++ b/en/index.html
@@ -21,7 +21,7 @@
 
         <div class="icon-social">
             <div class="top-link">
-                <a onclick="signin()">Sing in</a>
+                <a onclick="signin()">Sign in</a>
                 <a onclick="signup()">Become a Partner</a>
                 <div class="lang">
                     <a>EN</a> | <a href="../th/index.html">TH</a>
